src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Application Form</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed - Approved</fullName>
        </values>
        <values>
            <fullName>Closed - Rejected</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Termination Process</fullName>
        <description>Process for Termination Cases</description>
        <isActive>true</isActive>
        <values>
            <fullName>Brand Sales Approved</fullName>
        </values>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Closed - Approved</fullName>
        </values>
        <values>
            <fullName>Closed - Rejected</fullName>
        </values>
        <values>
            <fullName>Finance Approved</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Case_Comments__c</fullName>
        <label>Case Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DDA_De_Registration_Required_1__c</fullName>
        <formula>IF( ISPICKVAL( Account.License_Type__c , &quot;DDA&quot;) , &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DDA De-Registration Required?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>De_Registration_Required__c</fullName>
        <label>DDA De-Registration Required?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Financial_Obligation_Date__c</fullName>
        <label>Financial Obligation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Cancelled__c</fullName>
        <formula>IF(
ISPICKVAL( Status, &quot;Cancelled&quot;),true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key_Handover_Date__c</fullName>
        <label>Key Handover Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Move_Out_Date__c</fullName>
        <description>Captured on the case termination record type</description>
        <label>Move Out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Opportunity_Stage__c</fullName>
        <formula>TEXT(Opportunity__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SF_AGNO__c</fullName>
        <formula>Quote__r.Opportunity.AG_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SF AGNO</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Type__c</fullName>
        <label>Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Termination with Downsize</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TempOwnerId__c</fullName>
        <label>TempOwnerId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Termination_Date__c</fullName>
        <description>To indicate when a Contract Linked to this case will Terminate</description>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Termination_Reason__c</fullName>
        <label>Termination Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Termination_Reason_new__c</fullName>
        <label>Termination Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Downsizing</fullName>
                </value>
                <value>
                    <fullName>Lease Cancellation</fullName>
                </value>
                <value>
                    <fullName>Lease Merger</fullName>
                </value>
                <value>
                    <fullName>Relocation Contraction</fullName>
                </value>
                <value>
                    <fullName>Relocation expansion</fullName>
                </value>
                <value>
                    <fullName>Area Amendment</fullName>
                </value>
                <value>
                    <fullName>Rent Reduction</fullName>
                </value>
                <value>
                    <fullName>Splitting</fullName>
                </value>
                <value>
                    <fullName>Changing: The name/Activity/FZ-LLC/Branch/Shareholders</fullName>
                </value>
                <value>
                    <fullName>Lease termination for DED tenant</fullName>
                </value>
                <value>
                    <fullName>Relocation due to TECOM request.(without financial impact)</fullName>
                </value>
                <value>
                    <fullName>Calculation Only</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Financial Challenges</fullName>
                    <isActive>false</isActive>
                    <label>Financial Challenges</label>
                </value>
                <value>
                    <fullName>High Rent</fullName>
                    <isActive>false</isActive>
                    <label>High Rent</label>
                </value>
                <value>
                    <fullName>Moving to other free zone in UAE</fullName>
                    <isActive>false</isActive>
                    <label>Moving to other free zone in UAE</label>
                </value>
                <value>
                    <fullName>Repossession</fullName>
                    <isActive>false</isActive>
                    <label>Repossession</label>
                </value>
                <value>
                    <fullName>Unsatisfied service</fullName>
                    <isActive>false</isActive>
                    <label>Unsatisfied service</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Termination_Type__c</fullName>
        <formula>IF(
  Termination_Date__c = Contract__r.EndDate, &quot;Normal&quot;,
 IF(
   Termination_Date__c &lt; Contract__r.EndDate, &quot;Early&quot;,
&quot;Normal&quot;)
)</formula>
        <label>Termination Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Orders_In_Progress__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Work Orders In Progress</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Yardi_Brand_Code__c</fullName>
        <formula>Quote__r.Opportunity.T_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Yardi Lease Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Yardi_Integration_Error_Message__c</fullName>
        <label>Yardi Integration Error Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Yardi_Integration_Status__c</fullName>
        <label>Yardi Integration Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ready for Integration</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllClosedCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Closed Cases</label>
    </listViews>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.TYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <recordTypes>
        <fullName>Assignment</fullName>
        <active>true</active>
        <businessProcess>Application Form</businessProcess>
        <label>Assignment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <businessProcess>Application Form</businessProcess>
        <label>Default</label>
    </recordTypes>
    <recordTypes>
        <fullName>Lease_Termination</fullName>
        <active>true</active>
        <businessProcess>Termination Process</businessProcess>
        <description>To be used when a termination has been initiated on an active lease contract</description>
        <label>Lease Termination</label>
    </recordTypes>
    <recordTypes>
        <fullName>On_Boarding_Premise</fullName>
        <active>true</active>
        <businessProcess>Application Form</businessProcess>
        <description>To create a Case for Premise On-Boarding</description>
        <label>On-Boarding Premise</label>
    </recordTypes>
    <recordTypes>
        <fullName>Premise_Handover</fullName>
        <active>true</active>
        <businessProcess>Application Form</businessProcess>
        <label>Premise Handover</label>
    </recordTypes>
    <recordTypes>
        <fullName>Premise_Holdover</fullName>
        <active>true</active>
        <businessProcess>Application Form</businessProcess>
        <label>Premise Holdover</label>
    </recordTypes>
    <recordTypes>
        <fullName>Provisional_Approval</fullName>
        <active>true</active>
        <businessProcess>Application Form</businessProcess>
        <label>Provisional Approval</label>
    </recordTypes>
    <recordTypes>
        <fullName>RecordType</fullName>
        <active>true</active>
        <businessProcess>Application Form</businessProcess>
        <description>To create a Case for Land On-Boarding</description>
        <label>Land On-Boarding</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>Check_Contact_Account_Owner_Role</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( Status , &apos;Closed - Approved&apos;),ISBLANK( Contact.Account.Owner.UserRoleId ), !ISBLANK(ContactId) )</errorConditionFormula>
        <errorDisplayField>ContactId</errorDisplayField>
        <errorMessage>Contact&apos;s Account&apos;s owner must be assigned a role.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Contact_before_closed_approved</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISBLANK( ContactId ) , ISPICKVAL(Status, &apos;Closed - Approved&apos;))</errorConditionFormula>
        <errorDisplayField>ContactId</errorDisplayField>
        <errorMessage>Contact Name cannot be null</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Finnancial_Obligation_is_required</fullName>
        <active>true</active>
        <description>Finnancial obligation is required under brand sales approved for sending it to yardi</description>
        <errorConditionFormula>AND(ISBLANK( Financial_Obligation_Date__c ) , ISPICKVAL(Status, &apos;Brand Sales Approved&apos;),  RecordType.DeveloperName=&apos;Lease_Termination&apos;)</errorConditionFormula>
        <errorMessage>Financial obligation date is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Termination_Date_Before_Move_Out_Date</fullName>
        <active>false</active>
        <description>The Move Out Date can&apos;t be before the Termination Date</description>
        <errorConditionFormula>Move_Out_Date__c &lt; Termination_Date__c</errorConditionFormula>
        <errorMessage>The Move Out Date can&apos;t be before the Termination Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Unable_to_Close_Approve_Case</fullName>
        <active>true</active>
        <description>Validates if any work orders are New OR In Progress AND if Case is Closed - Approved</description>
        <errorConditionFormula>AND(
ISPICKVAL( Status, &quot;Closed - Approved&quot;),
 Work_Orders_In_Progress__c = true)</errorConditionFormula>
        <errorMessage>There are Work Orders still In Progress, Unable to Close Approve this Case</errorMessage>
    </validationRules>
</CustomObject>